Add card style, add cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="columns-container">
     <div class="column">
-        <card-column name="Theme" [numberToDraw]=1></card-column>
+        <card-column cardType="Theme" [numberToDraw]=1></card-column>
     </div>
     <div class="column">
-        <card-column name="Goal"></card-column>
+        <card-column cardType="Goal" [numberToDraw]=1></card-column>
     </div>
     <div class="column">
-        <card-column name="Setting"></card-column>
+        <card-column cardType="Setting" [numberToDraw]=2></card-column>
     </div>
     <div class="column">
-        <card-column name="Wildcard"></card-column>
+        <card-column cardType="Wildcard" [numberToDraw]=3></card-column>
     </div>
 </div>
