--- a/src/app/card-column/card-column.component.html
+++ b/src/app/card-column/card-column.component.html
@@ -1,3 +1,8 @@
 <div class="column-container">
-    <h2>{{name | uppercase}}</h2>
+    <h2>{{cardType | uppercase}}</h2>
+    <ul>
+        <li *ngFor="let card of this.hand">
+            <card [card]="card"></card>
+        </li>
+    </ul>
 </div>
