--- a/src/app/card-column/card-column.component.less
+++ b/src/app/card-column/card-column.component.less
@@ -3,4 +3,15 @@
         text-align: center;
         color: white;
     }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+        li {
+            list-style-type: none;
+        }
+    }
 }
