--- a/src/app/card/card.component.less
+++ b/src/app/card/card.component.less
@@ -1,3 +1,24 @@
-.card-background {
-
+.cardBackground {
+    width: 15vw;
+    height: 20vw;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5%;
+    border: 0.5vw solid white;
+    h3 {
+        color: white;
+        font-size: 1.5vw;
+        font-weight: 600;
+        text-align: center;
+        margin: 10% 0;
+    }
+    img {
+        margin: 0 20%;
+    }
+    p {
+        color: rgba(255, 255, 255, 0.588235);
+        font-size: 1vw;
+        text-align: center;
+        margin: 10% 5%;
+    }
 }
