--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -2,6 +2,12 @@
     display: flex;
 }
 
+@media only screen and (max-width: 768px) {
+    .columns-container {
+        flex-direction: column;
+    }
+}
+
 .column {
     flex-grow: 1;
 }
