--- a/src/app/card-column/card-column.component.less
+++ b/src/app/card-column/card-column.component.less
@@ -2,6 +2,13 @@
     h2 {
         text-align: center;
         color: white;
+        font-size: 2vw;
+    }
+    
+    @media only screen and (max-width: 768px) {
+        h2 {
+            font-size: 10vw;
+        }
     }
 
     ul {
