--- a/src/app/card/card.component.less
+++ b/src/app/card/card.component.less
@@ -1,24 +1,97 @@
 .cardBackground {
-    width: 15vw;
-    height: 20vw;
+    width: 19.28vw;
+    height: 27vw;
     display: flex;
     flex-direction: column;
     border-radius: 5%;
     border: 0.5vw solid white;
+
     h3 {
         color: white;
-        font-size: 1.5vw;
+        font-size: 2vw;
         font-weight: 600;
         text-align: center;
-        margin: 10% 0;
+        margin: 10% 0 auto 0;
     }
-    img {
-        margin: 0 20%;
+
+    .fade-out {
+        position: absolute;
+        width: 10vw;
+        margin: 7% 0 0 4.75%;
+        animation: fadeout 1s forwards;
     }
+
+    .fade-in {
+        position: absolute;
+        width: 10vw;
+        margin: 7% 0 0 4.75%;
+        animation: fadein 1s forwards;
+    }
+
+    @keyframes fadeout {
+        from {
+            opacity: 1;
+        }
+        to {
+            opacity: 0;
+        }
+    }
+
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+    
     p {
         color: rgba(255, 255, 255, 0.588235);
-        font-size: 1vw;
+        font-size: 1.4vw;
         text-align: center;
-        margin: 10% 5%;
+        margin: auto 5% 10% 5%;
+        height: 6vw;
+    }
+
+    @media only screen and (max-width: 768px) {
+        width: 57vw;
+        height: 80vw;
+
+        h3 {
+            font-size: 7vw;
+            margin: 10% 0 auto 0;
+        }
+
+        p {
+            font-size: 4vw;
+            height: 16vw;
+        }
+
+        .fade-out {
+            width: 30vw;
+            margin: 23% 0 0 13%;
+        }
+    
+        .fade-in {
+            width: 30vw;
+            margin: 23% 0 0 13%;
+        }
+    }
+
+    .setting-filter {
+        filter: brightness(0) saturate(100%) invert(61%) sepia(48%) saturate(414%) hue-rotate(144deg) brightness(125%) contrast(91%);
+    }
+
+    .theme-filter {
+        filter: brightness(0) saturate(100%) invert(58%) sepia(9%) saturate(1688%) hue-rotate(268deg) brightness(125%) contrast(92%);
+    }
+
+    .goal-filter {
+        filter: brightness(0) saturate(100%) invert(81%) sepia(27%) saturate(466%) hue-rotate(352deg) brightness(93%) contrast(113%);
+    }
+
+    .wildcard-filter {
+        filter: brightness(0) saturate(100%) invert(84%) sepia(19%) saturate(538%) hue-rotate(67deg) brightness(86%) contrast(112%);
     }
 }
