Cards stack on top of eachother

--- a/src/app/card-column/card-column.component.html
+++ b/src/app/card-column/card-column.component.html
@@ -1,7 +1,7 @@
 <div class="column-container">
     <h2>{{cardType | uppercase}}</h2>
     <ul>
-        <li *ngFor="let card of this.hand">
+        <li *ngFor="let card of this.hand; index as i" class="card-container" style="--index: {{i}}">
             <card [card]="card"></card>
         </li>
     </ul>
