--- a/src/app/card/card.component.less
+++ b/src/app/card/card.component.less
@@ -20,7 +20,11 @@
     .icon {
         position: absolute;
         width: 10vw;
-        margin: 7% 0 0 4.75%;
+        margin-left: 4.6vw;
+        margin-top: 7vw;
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
+        user-select: none; /* Standard syntax */
     }
     
     p {
