--- a/src/app/card-column/card-column.component.less
+++ b/src/app/card-column/card-column.component.less
@@ -8,6 +8,7 @@
     @media only screen and (max-width: 768px) {
         h2 {
             font-size: 10vw;
+            margin: 10vw 0 5vw 0;
         }
     }
 
@@ -17,8 +18,17 @@
         margin: 0;
         padding: 0;
         align-items: center;
-        li {
+        .card-container {
             list-style-type: none;
+            position: absolute;
+            top: calc((var(--index) * 7vw) + 7vw);
+        }
+
+        @media only screen and (max-width: 768px) {
+            .card-container {
+                position: static;
+                margin-top: 5vw;
+            }
         }
     }
 }
