Change cards to ideas to enforce the idea that I am moving away from cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="columns-container">
     <div class="column">
-        <card-column cardType="Theme" [numberToDraw]=1></card-column>
+        <ideas ideaType="Theme" [amount]=1></ideas>
     </div>
     <div class="column">
-        <card-column cardType="Goal" [numberToDraw]=1></card-column>
+        <ideas ideaType="Goal" [amount]=1></ideas>
     </div>
     <div class="column">
-        <card-column cardType="Setting" [numberToDraw]=2></card-column>
+        <ideas ideaType="Setting" [amount]=2></ideas>
     </div>
     <div class="column">
-        <card-column cardType="Wildcard" [numberToDraw]=3></card-column>
+        <ideas ideaType="Wildcard" [amount]=3></ideas>
     </div>
 </div>
