--- a/src/app/ideas/ideas.component.less
+++ b/src/app/ideas/ideas.component.less
@@ -18,14 +18,14 @@
         margin: 0;
         padding: 0;
         align-items: center;
-        .card-container {
+        .idea-container {
             list-style-type: none;
             position: absolute;
             top: calc((var(--index) * 7vw) + 7vw);
         }
 
         @media only screen and (max-width: 768px) {
-            .card-container {
+            .idea-container {
                 position: static;
                 margin-top: 5vw;
             }
