Draw new cards by clicking

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>GAME COMPLEX</h1>
+<h1 class="title">GAME COMPLEX</h1>
+<p class="subtitle">A Game Idea Generator by Singulo</p>
 <div class="idea-types-container">
     <ideas [ideaType]="theme" [amount]=1></ideas>
     <ideas [ideaType]="goal" [amount]=1></ideas>
