--- a/src/app/ideas/ideas.component.less
+++ b/src/app/ideas/ideas.component.less
@@ -1,7 +1,7 @@
 .ideas-container {
     h2 {
         font-size: 48px;
-        margin: 0 0 0 145px;
+        margin: 0 0 0 150px;
     }
 
     ul {
@@ -9,6 +9,7 @@
         flex-direction: column;
         margin: 0;
         padding: 0;
+        gap: 8px;
         
         .idea-container {
             list-style-type: none;
