--- a/src/styles.less
+++ b/src/styles.less
@@ -18,10 +18,30 @@ html {
     background-color: rgb(30, 22, 34);
 }
 
-h1, h2, h3 {
+h1, h2 {
     font-family: enter-command-bold;
 }
 
-p {
+h3 {
     font-family: enter-command;
+}
+
+p {
+    font-family: enter-command-italic;
+}
+
+.setting-filter {
+    filter: invert(61%) sepia(48%) saturate(414%) hue-rotate(144deg) brightness(125%) contrast(91%);
+}
+
+.theme-filter {
+    filter: invert(58%) sepia(9%) saturate(1688%) hue-rotate(268deg) brightness(125%) contrast(92%);
+}
+
+.goal-filter {
+    filter: invert(91%) sepia(16%) saturate(2210%) hue-rotate(318deg) brightness(99%) contrast(92%);
+}
+
+.wildcard-filter {
+    filter: invert(84%) sepia(19%) saturate(538%) hue-rotate(67deg) brightness(86%) contrast(112%);
 }
