--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,13 +1,22 @@
-h1 {
+.title {
     color: white;
     text-align: center;
     font-size: 64px;
+    margin: 32px 0 0 0;
+}
+
+.subtitle {
+    color: white;
+    text-align: center;
+    font-size: 32px;
+    opacity: 0.5;
+    margin: 0 0 32px 0;
 }
 
 .idea-types-container {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 600px;
     margin: 0 auto;
 }
 
@@ -20,4 +29,5 @@ h1 {
 
 ideas {
     flex-grow: 1;
+    margin: 0 0 20px 0;
 }
