--- a/src/app/idea/idea.component.less
+++ b/src/app/idea/idea.component.less
@@ -1,11 +1,21 @@
+.locked-border {
+    border-radius: 8px;
+    outline-width: 4px;
+    outline-style: solid;
+}
+
 .content-container {
     display: flex;
+    padding: 8px;
 
     .lock-button {
         width: 32px;
         background-color: transparent;
         border: 0;
         padding: 0;
+        flex-shrink: 0;
+        display: grid;
+        margin: 16px 0 0 0;
         
         .lock-icon {
             width: 32px;
@@ -38,48 +48,39 @@
             100% {rotate: 0deg;}
         }
     }
+    .discard-button {
+        display: flex;
+        background-color: transparent;
+        border: 0;
+        padding: 0;
 
-    .text-container {
-        h3 {
-            font-size: 32px;
-            text-align: left;
-            margin: 0;
-        }
-
-        p {
-            color: white;
-            font-size: 24px;
-            text-align: left;
-            margin: 0;
-            opacity: 0.5;
-        }
-    }
+        .text-container {
+            h3 {
+                font-size: 32px;
+                text-align: left;
+                margin: 0;
+            }
     
-    .icon-container {
-        width: 64px;
-        height: 64px;
-        margin: 0 32px 0 16px;
-        flex-shrink: 0;
-        
-        .icon {
-            position: absolute;
-            width: 64px;
+            p {
+                color: white;
+                font-size: 24px;
+                text-align: left;
+                margin: 0;
+                opacity: 0.5;
+            }
         }
-    }
-
-    .setting-filter {
-        filter: invert(61%) sepia(48%) saturate(414%) hue-rotate(144deg) brightness(125%) contrast(91%);
-    }
-
-    .theme-filter {
-        filter: invert(58%) sepia(9%) saturate(1688%) hue-rotate(268deg) brightness(125%) contrast(92%);
-    }
-
-    .goal-filter {
-        filter: invert(91%) sepia(16%) saturate(2210%) hue-rotate(318deg) brightness(99%) contrast(92%);
-    }
-
-    .wildcard-filter {
-        filter: invert(84%) sepia(19%) saturate(538%) hue-rotate(67deg) brightness(86%) contrast(112%);
+        
+        .icon-container {
+            display: flex;
+            width: 64px;
+            height: 64px;
+            margin: 0 32px 0 16px;
+            flex-shrink: 0;
+    
+            .icon {
+                position: absolute;
+                width: 64px;
+            }
+        }
     }
 }
