--- a/src/styles.less
+++ b/src/styles.less
@@ -18,16 +18,28 @@ html {
     background-color: rgb(30, 22, 34);
 }
 
-h1, h2 {
+h1 {
     font-family: enter-command-bold;
+    font-size: calc(32px + 0.5vmax);
+}
+
+h2 {
+    font-family: enter-command-bold;
+    font-size: calc(24px + 0.5vmax);
 }
 
 h3 {
     font-family: enter-command;
+    font-size: calc(16px + 0.5vmax);
 }
 
 p {
     font-family: enter-command-italic;
+    font-size: calc(12px + 0.5vmax);
+}
+
+body {
+    margin: 0;
 }
 
 .setting-filter {
