--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,33 +1,39 @@
 .title {
     color: white;
     text-align: center;
-    font-size: 64px;
-    margin: 32px 0 0 0;
+    margin: 1vmax 0 0 0;
 }
 
 .subtitle {
     color: white;
     text-align: center;
-    font-size: 32px;
     opacity: 0.5;
-    margin: 0 0 32px 0;
+    margin: 0 0 1vmax 0;
 }
 
 .idea-types-container {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: calc(300px + 20vmax);
     margin: 0 auto;
+
+    .randomize-button {
+        color: white;
+        background-color: transparent;
+        border: 0;
+        font-family: enter-command-bold;
+        font-size: calc(32px + 0.5vmax);
+        padding: 0;
+    }
 }
 
 @media only screen and (max-width: 768px) {
     .idea-types-container {
-        width: auto;
-        margin: 0;
+        width: 90vw;
     }
 }
 
 ideas {
     flex-grow: 1;
-    margin: 0 0 20px 0;
+    margin: 0 0 1vmax 0;
 }
