--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -1,6 +1,6 @@
 <div class="content-container" [ngClass]="{'locked-border': locked}" [style.outline-color]="idea.ideaType.iconColor">
     <button class="lock-button" (click)="onLockClicked()">
-        <img #lockIcon class="lock-icon unlock" [src]="this.locked ? 'assets/game-icons.net/lorc/padlock.svg' : 'assets/game-icons.net/delapouite/padlock-open.svg'" draggable="false">
+        <img #lockIcon class="lock-icon" [src]="this.locked ? 'assets/game-icons.net/lorc/padlock.svg' : 'assets/game-icons.net/delapouite/padlock-open.svg'" draggable="false">
     </button>
     <button class="discard-button" (click)="onDiscardClicked($event)">
         <div class="icon-container">
