--- a/src/app/idea/idea.component.less
+++ b/src/app/idea/idea.component.less
@@ -6,31 +6,32 @@
 
 .content-container {
     display: flex;
-    padding: 8px;
+    padding: 0.5vmax;
 
     .lock-button {
-        width: 32px;
+        width: calc(16px + 0.5vmax);
         background-color: transparent;
         border: 0;
         padding: 0;
         flex-shrink: 0;
         display: grid;
-        margin: 16px 0 0 0;
+        margin: calc((16px + 0.5vmax) / 2) 0 0 0;
         
         .lock-icon {
-            width: 32px;
+            width: calc(16px + 0.5vmax);
+            opacity: 0.5;
         }
 
         .lock {
             animation: lock 0.5s ease-in;
             opacity: 1;
         }
-    
+
         .unlock {
             animation: unlock 0.5s ease-out;
             opacity: 0.5;
         }
-    
+
         @keyframes lock {
             0% {rotate: 0deg;}
             20% {rotate: 20deg;}
@@ -48,6 +49,7 @@
             100% {rotate: 0deg;}
         }
     }
+
     .discard-button {
         display: flex;
         background-color: transparent;
@@ -56,14 +58,12 @@
 
         .text-container {
             h3 {
-                font-size: 32px;
                 text-align: left;
                 margin: 0;
             }
     
             p {
                 color: white;
-                font-size: 24px;
                 text-align: left;
                 margin: 0;
                 opacity: 0.5;
@@ -72,14 +72,14 @@
         
         .icon-container {
             display: flex;
-            width: 64px;
-            height: 64px;
-            margin: 0 32px 0 16px;
+            width: calc(32px + 1vmax);
+            height: calc(32px + 1vmax);
+            margin: 0 calc(16px + 1vmax) 0 calc(8px + 1vmax);
             flex-shrink: 0;
     
             .icon {
                 position: absolute;
-                width: 64px;
+                width: calc(32px + 1vmax);
             }
         }
     }
