--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -2,7 +2,7 @@
     <h2 [style.color]="ideaType.iconColor">{{ideaType.typeName| uppercase}}</h2>
     <ul>
         <li *ngFor="let idea of this.activeIdeas; index as i" class="idea-container">
-            <idea [idea]="idea" [index]="i" (onClicked)="dropIdea($event)"></idea>
+            <idea [idea]="idea" [index]="i" (onClicked)="dropIdea($event)" (onLocked)="lockIdea($event)"></idea>
         </li>
     </ul>
 </div>
