--- a/src/app/ideas/ideas.component.less
+++ b/src/app/ideas/ideas.component.less
@@ -1,7 +1,6 @@
 .ideas-container {
     h2 {
-        font-size: 48px;
-        margin: 0 0 0 150px;
+        margin: 0 0 1vmax 0;
     }
 
     ul {
@@ -9,11 +8,11 @@
         flex-direction: column;
         margin: 0;
         padding: 0;
-        gap: 8px;
-        
+        gap: 1vmax;
+
         .idea-container {
             list-style-type: none;
-            margin: 10px 0 0 0;
+            margin: 0;
         }
     }
 }
