Reduce to 5 icons, add more ideas

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,14 +1,26 @@
-.title {
+.randomize-button {
+    margin: 1vmax auto;
+    position: relative;
     color: white;
-    text-align: center;
-    margin: 1vmax 0 0 0;
-}
+    background-color: transparent;
+    border: 0;
+    font-family: enter-command-bold;
+    font-size: calc(32px + 0.5vmax);
+    padding: 0;
+    width: 100%;
 
-.subtitle {
-    color: white;
-    text-align: center;
-    opacity: 0.5;
-    margin: 0 0 1vmax 0;
+    .title {
+        color: white;
+        text-align: center;
+        margin: 0;
+    }
+    
+    .subtitle {
+        color: white;
+        text-align: center;
+        opacity: 0.5;
+        margin: 0;
+    }
 }
 
 .idea-types-container {
@@ -16,15 +28,7 @@
     flex-direction: column;
     width: calc(300px + 20vmax);
     margin: 0 auto;
-
-    .randomize-button {
-        color: white;
-        background-color: transparent;
-        border: 0;
-        font-family: enter-command-bold;
-        font-size: calc(32px + 0.5vmax);
-        padding: 0;
-    }
+    position: relative;
 }
 
 @media only screen and (max-width: 768px) {
