--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<h1 class="title">GAME COMPLEX</h1>
-<p class="subtitle">A Game Idea Generator by Singulo</p>
+<button class="randomize-button" (click)="onRandomizeClicked($event)">
+    <h1 class="title">GAME COMPLEX</h1>
+    <p class="subtitle">A Game Idea Generator by Singulo</p>
+</button>
+
 <div class="idea-types-container">
     <ideas [ideaType]="themeType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
     <ideas [ideaType]="goalType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
     <ideas [ideaType]="settingType" [amount]=2 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
     <ideas [ideaType]="wildcardType" [amount]=3 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
-    <button #randomizeButton class="randomize-button" (click)="onRandomizeClicked($event)">RANDOMIZE</button>
 </div>
