--- a/src/styles.less
+++ b/src/styles.less
@@ -21,25 +21,31 @@ html {
 h1 {
     font-family: enter-command-bold;
     font-size: calc(32px + 0.5vmax);
+    color: white;
 }
 
 h2 {
     font-family: enter-command-bold;
     font-size: calc(24px + 0.5vmax);
+    color: white;
 }
 
 h3 {
     font-family: enter-command;
     font-size: calc(16px + 0.5vmax);
+    color: white;
 }
 
 p {
     font-family: enter-command-italic;
     font-size: calc(12px + 0.5vmax);
+    color: white;
+    opacity: 0.5;
 }
 
 body {
     margin: 0;
+    height: 100%;
 }
 
 .setting-filter {
