--- a/src/app/idea/idea.component.less
+++ b/src/app/idea/idea.component.less
@@ -16,7 +16,8 @@
         flex-shrink: 0;
         display: grid;
         margin: calc((16px + 0.5vmax) / 2) 0 0 0;
-        
+        cursor: pointer;
+
         .lock-icon {
             width: calc(16px + 0.5vmax);
             opacity: 0.5;
@@ -55,6 +56,7 @@
         background-color: transparent;
         border: 0;
         padding: 0;
+        cursor: pointer;
 
         .text-container {
             h3 {
@@ -63,10 +65,8 @@
             }
     
             p {
-                color: white;
                 text-align: left;
                 margin: 0;
-                opacity: 0.5;
             }
         }
         
