Add more ideas, remove randomize text, don't use absolute for footer

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,9 +6,9 @@
     font-family: enter-command-bold;
     font-size: calc(32px + 0.5vmax);
     padding: 0;
-    width: 100%;
     cursor: pointer;
-
+    width: 100%;
+    
     .title {
         text-align: center;
         margin: 0;
@@ -17,9 +17,15 @@
         text-align: center;
         margin: 0;
     }
-    .randomize {
-        margin: 0;
-    }
+}
+
+.help-button {
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+    position: absolute;
+    top: calc(16px + 0.5vmax);
 }
 
 .idea-types-container {
@@ -45,8 +51,6 @@ footer {
     margin: 0;
     display: flex;
     width: 100%;
-    position: absolute;
-    bottom: 0;
     justify-content: center;
     text-align: center;
     
