Add more wildcards, group header can now be clicked to randomize the group

--- a/src/app/ideas/ideas.component.less
+++ b/src/app/ideas/ideas.component.less
@@ -1,7 +1,14 @@
 .ideas-container {
-    h2 {
-        margin: 0 0 1vmax 0;
+    .ideas-button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        
+        h2 {
+            margin: 0 0 1vmax 0;
+        }
     }
+    
 
     ul {
         display: flex;
