--- a/src/app/ideas/ideas.component.html
+++ b/src/app/ideas/ideas.component.html
@@ -1,5 +1,7 @@
 <div class="ideas-container">
-    <h2 [style.color]="ideaType.iconColor">{{ideaType.typeName| uppercase}}</h2>
+    <button class="ideas-button" (click)="dropIdeas()">
+        <h2 [style.color]="ideaType.iconColor">{{ideaType.typeName| uppercase}}</h2>
+    </button>
     <ul>
         <li *ngFor="let idea of this.activeIdeas; index as i" class="idea-container">
             <idea [idea]="idea" [index]="i" (onClicked)="dropIdea($event)" (onLocked)="lockIdea($event)"></idea>
