--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,21 @@
-<button class="randomize-button" (click)="onRandomizeClicked($event)">
-        <h1 class="title">GAME COMPLEX</h1>
-        <p class="subtitle">A Game Idea Generator by Singulo</p>
-</button>
+<div class="content">
+    <button class="randomize-button" (click)="onRandomizeClicked($event)">
+            <h1 class="title">GAME COMPLEX</h1>
+            <p class="subtitle">A Game Idea Generator by Singulo</p>
+    </button>
 
-<div class="idea-types-container">
-    <ideas [ideaType]="themeType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
-    <ideas [ideaType]="goalType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
-    <ideas [ideaType]="settingType" [amount]=2 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
-    <ideas [ideaType]="wildcardType" [amount]=3 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
+    <div class="idea-types-container">
+        <div class="idea-types-group">
+            <ideas [ideaType]="themeType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
+            <ideas [ideaType]="settingType" [amount]=2 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
+        </div>
+        <div class="idea-types-group">
+            <ideas [ideaType]="goalType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
+            <ideas [ideaType]="wildcardType" [amount]=3 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
+        </div>
+    </div>
+
+    <footer>
+        <p>Icons by many contributors on <a href="https://game-icons.net/">Game-icons.net</a>. Font is by jeti on <a href="https://www.dafont.com/jeti.d1589">dafont.com</a>.</p>
+    </footer>
 </div>
-
-<footer>
-    <p>Icons by many contributors on <a href="https://game-icons.net/">Game-icons.net</a>. Font is by jeti on <a href="https://www.dafont.com/jeti.d1589">dafont.com</a>.</p>
-</footer>
