--- a/src/app/ideas/ideas.component.less
+++ b/src/app/ideas/ideas.component.less
@@ -3,9 +3,16 @@
         background-color: transparent;
         border: none;
         cursor: pointer;
-        
+        display: flex;
+        margin: 0 0 1vmax 0;
+
+        img {
+            width: calc(4px + 1vmax);
+            margin-right: 10px;
+        }
+
         h2 {
-            margin: 0 0 1vmax 0;
+            margin: 0;
         }
     }
     
