--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="content">
-    <button class="randomize-button" (click)="onRandomizeClicked($event)">
+    <button class="randomize-button" (click)="onRandomizeClicked($event)" aria-label="Randomize all">
+        <div class="title-container">
+            <img src="assets/game-icons.net/delapouite/perspective-dice-six-faces-random.svg" draggable="false">
             <h1 class="title">GAME COMPLEX</h1>
-            <p class="subtitle">A Game Idea Generator by Singulo</p>
+        </div>
+        <p class="subtitle">A Game Idea Generator by Singulo</p>
     </button>
-
+    <p class="instructions">Click the title to randomize all. Click the categories to randomize that category. Click an individual idea to randomize it. Lock the ones you like!</p>
     <div class="idea-types-container">
         <div class="idea-types-group">
             <ideas [ideaType]="themeType" [amount]=1 [randomizeEvent]="randomizeSubject.asObservable()"></ideas>
@@ -16,6 +19,7 @@
     </div>
 
     <footer>
-        <p>Icons by many contributors on <a href="https://game-icons.net/">Game-icons.net</a>. Font is by jeti on <a href="https://www.dafont.com/jeti.d1589">dafont.com</a>.</p>
+        <p>Icons by many contributors on <a href="https://game-icons.net/">Game-icons.net</a>. Font is by <a href="https://www.dafont.com/jeti.d1589">jeti on dafont.com</a>.</p>
+        <p>Built using <a href="https://angular.dev/">Angular 16.2.16</a>.</p>
     </footer>
 </div>
