--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -13,17 +13,34 @@
         padding: 0;
         cursor: pointer;
         width: 100%;
-        
-        .title {
-            text-align: center;
-            margin: 0;
+
+        .title-container {
+            display: flex;
+            justify-content: center;
+
+            img {
+                filter: brightness(0) saturate(100%) invert(95%) sepia(100%) saturate(20%) hue-rotate(326deg) brightness(106%) contrast(105%);
+                width: calc(8px + 1vmax);
+                margin-right: 10px;
+            }
+
+            .title {
+                text-align: center;
+                margin: 0;
+            }
         }
+        
         .subtitle {
             text-align: center;
             margin: 0;
         }
     }
-    
+
+    .instructions {
+        text-align: center;
+        margin: 0 0 20px 0;
+    }
+
     .help-button {
         cursor: pointer;
         background-color: transparent;
@@ -54,6 +71,7 @@
         .idea-types-container {
             flex-direction: column;
             margin: 0 auto;
+            justify-content: start;
         }
     }
     
@@ -62,13 +80,14 @@
         display: flex;
         width: 100%;
         justify-content: center;
-        
+        flex-direction: column;
         p {
             margin: 0;
-    
+            text-align: center;
             a {
                 color: white;
                 text-decoration: none;
+                font-weight: bold;
             }
         }
     }
